logs/region_growing_rgb/build.make.084.log.stderr
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp: In function ‘int main(int, char**)’:
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:138:70: error: no matching function for call to ‘waitForMessage(const char [20], ros::NodeHandle&)’
   objectCenters = ros::topic::waitForMessage("/object_XYZ_centers", n);
                                                                      ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:138:70: note: candidates are:
In file included from /opt/ros/indigo/include/ros/ros.h:55:0,
                 from /home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:1:
/opt/ros/indigo/include/ros/topic.h:86:28: note: template<class M> boost::shared_ptr<const M> ros::topic::waitForMessage(const string&, ros::NodeHandle&, ros::Duration)
 boost::shared_ptr<M const> waitForMessage(const std::string& topic, NodeHandle& nh, ros::Duration timeout)
                            ^
/opt/ros/indigo/include/ros/topic.h:86:28: note:   template argument deduction/substitution failed:
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:138:70: note:   candidate expects 3 arguments, 2 provided
   objectCenters = ros::topic::waitForMessage("/object_XYZ_centers", n);
                                                                      ^
In file included from /opt/ros/indigo/include/ros/ros.h:55:0,
                 from /home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:1:
/opt/ros/indigo/include/ros/topic.h:105:28: note: template<class M> boost::shared_ptr<const M> ros::topic::waitForMessage(const string&)
 boost::shared_ptr<M const> waitForMessage(const std::string& topic)
                            ^
/opt/ros/indigo/include/ros/topic.h:105:28: note:   template argument deduction/substitution failed:
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:138:70: note:   candidate expects 1 argument, 2 provided
   objectCenters = ros::topic::waitForMessage("/object_XYZ_centers", n);
                                                                      ^
In file included from /opt/ros/indigo/include/ros/ros.h:55:0,
                 from /home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:1:
/opt/ros/indigo/include/ros/topic.h:120:28: note: template<class M> boost::shared_ptr<const M> ros::topic::waitForMessage(const string&, ros::Duration)
 boost::shared_ptr<M const> waitForMessage(const std::string& topic, ros::Duration timeout)
                            ^
/opt/ros/indigo/include/ros/topic.h:120:28: note:   template argument deduction/substitution failed:
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:138:70: note:   cannot convert ‘n’ (type ‘ros::NodeHandle’) to type ‘ros::Duration’
   objectCenters = ros::topic::waitForMessage("/object_XYZ_centers", n);
                                                                      ^
In file included from /opt/ros/indigo/include/ros/ros.h:55:0,
                 from /home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:1:
/opt/ros/indigo/include/ros/topic.h:135:28: note: template<class M> boost::shared_ptr<const M> ros::topic::waitForMessage(const string&, ros::NodeHandle&)
 boost::shared_ptr<M const> waitForMessage(const std::string& topic, ros::NodeHandle& nh)
                            ^
/opt/ros/indigo/include/ros/topic.h:135:28: note:   template argument deduction/substitution failed:
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:138:70: note:   couldn't deduce template parameter ‘M’
   objectCenters = ros::topic::waitForMessage("/object_XYZ_centers", n);
                                                                      ^
make[2]: *** [CMakeFiles/kinect_segmentation.dir/src/kinect_segmentation.cpp.o] Error 1
make[1]: *** [CMakeFiles/kinect_segmentation.dir/all] Error 2
make: *** [all] Error 2
